2.25.14

  [Jörg Frings-Fürst]
  * Add favicon.ico.
  * New Report_log_partX.php (2017-038).



2.25.13

  [Jörg Frings-Fürst]
  * Add upstream Rev. 2820:
    - Chnages at AST_agent_performance_detail.php.
  * Add upstream Rev. 2821:
    - Added system filter feature, before any other actions
      + agi-DID_route.agi,
        ASTERISK_13.txt,
        DNC-dot-COM_integration.txt,
        vicidial.php,
        AST_url_log_report.php,
        admin.php,
        help.php.
      + New www/vicidial/DNCcom_inbound_filter.php.
  * New extras/mysql_update/mysql-1519.sql (2017-034).
  * Add upstream Rev. 2822:
    - admin.php: Fix for Test Call function for Asterisk 13.
  * Add upstream Rev. 2823:
    - DNCcom_inbound_filter.php: Added in_filter_override option and cache
        searching option.
  * Add upstream Rev. 2824:
    - DNCcom_inbound_filter.php: hanged to log flags that are not used to
        filter, added in_cache_override option, added connect retry if rejected.
  * Add upstream Rev. 2825:
    - agi-VDAD_ALL_inbound.agi,
      agi-VDAD_ALL_outbound.agi,
      agi-VDAD_ALL_outboundBETA.agi: Added extension append options.
    - admin.php: Added extension_appended_cidname options and custom reports
        variable display.
    - functions.php: Added code for custom reports variable display.
    - help.php: Added new extension append cidname options and custom
       reports help.
    - vicidial_custom_reports_admin.php: Added custom variables.
  * Add upstream Rev. 2826:
    - AST_manager_listen_AMI2.pl: Commented out handle_sip_event and
        handle_cpd_event functions, not needed anymore, to be deleted later.
    - extensions.conf.sample-13: remove Playback(sip-silence) calls.
    - manager.conf.sample-13: remove eventfilter=Event: CPD-Result and
        eventfilter=Event: SIP-Hangup-Cause.
  * Add upstream Rev. 2827, 2828:
    - admin_listloader_fourth_gen.php: Fixed issue #1041.
  * Add upstream Rev. 2829:
    - admin_modify_lead.php,