@@ -1,12 +1,12 @@
 #!/usr/bin/perl
 #
-# ADMIN_restart_roll_logs.pl    version 2.12
+# ADMIN_restart_roll_logs.pl    version 2.14
 #
 # script to roll the Asterisk logs on machine restart
 #
 # have this run on the astersik server 
 #
-# Copyright (C) 2015  Matt Florell <vicidial@gmail.com>    LICENSE: AGPLv2
+# Copyright (C) 2017  Matt Florell <vicidial@gmail.com>    LICENSE: AGPLv2
 #
 # CHANGES:
 # 90311-0921 - Added /var/log/asterisk/screenlog log rolling
@@ -14,6 +14,7 @@
 # 130108-1715 - Changes for new log rolling script compatibility
 # 141124-2309 - Fixed Fhour variable bug
 # 151110-2005 - Added rolling of Asterisk cdr.db
+# 171010-2258 - Added rolling of proccess screenlogs
 #
 
 ($sec,$min,$hour,$mday,$mon,$year,$wday,$yday,$isdst) = localtime(time);
@@ -73,6 +74,47 @@ if ( -e '/var/log/asterisk/screenlog.0' )
 	`mv -f /var/log/asterisk/screenlog.0 /var/log/asterisk/screenlog.0.asterisk.$now_date`;
 	}
 
+print "rolling Vicidial screen logs...\n";
+if ( -e '/var/log/astguiclient/ASTVDauto-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTVDauto-screenlog.0 /var/log/astguiclient/ASTVDauto-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTVDremote-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTVDremote-screenlog.0 /var/log/astguiclient/ASTVDremote-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTfastlog-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTfastlog-screenlog.0 /var/log/astguiclient/ASTfastlog-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTlisten-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTlisten-screenlog.0 /var/log/astguiclient/ASTlisten-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTsend-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTsend-screenlog.0 /var/log/astguiclient/ASTsend-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTadFILL-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTadFILL-screenlog.0 /var/log/astguiclient/ASTadFILL-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTemail-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTemail-screenlog.0 /var/log/astguiclient/ASTemail-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTconf3way-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTconf3way-screenlog.0 /var/log/astguiclient/ASTconf3way-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTupdate-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTupdate-screenlog.0 /var/log/astguiclient/ASTupdate-screenlog.0.$now_date`;
+        }
+if ( -e '/var/log/astguiclient/ASTadpat-screenlog.0' )
+        {
+        `mv -f /var/log/astguiclient/ASTVDadapt-screenlog.0 /var/log/astguiclient/ASTVDadapt-screenlog.0.$now_date`;
+        }
 
 print "FINISHED... EXITING\n";
 
